--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
-build/
+test1/build/Desktop_Qt_6_6_3_MinGW_64_bit-Debug
 
 # qtcreator generated files
 *.pro.user*
